<resources>
    <string name="app_name">vsconnect</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="logar">Logar</string>
    <string name="teste">teste</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome">Nome</string>
    <string name="cadastro_de_dev">Cadastro de Dev</string>
    <string name="email">Email</string>
</resources>