<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
            android:text="Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textAlignment="center" android:textStyle="bold" android:textColor="#673AB7"
            android:typeface="sans" android:paddingVertical="10dp"/>
    <Space
            android:layout_width="match_parent"
            android:layout_height="246dp"/>
    <EditText
            android:id="@+id/editTextEmail"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:autofillHints=""
            android:inputType="textEmailAddress"/>
    <Space
            android:layout_width="match_parent"
            android:layout_height="23dp"/>
    <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:hint="@string/senha"
            android:autofillHints=""/>
    <Space
            android:layout_width="match_parent"
            android:layout_height="31dp"/>
    <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/logar"
            tools:ignore="MissingConstraints"/>

</LinearLayout>