<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="16dp"
              tools:context=".views.CadastroDev">

    <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cadastro_de_dev"
            android:textSize="24sp" />

    <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/nome" android:autofillHints="" android:inputType="TODO" tools:ignore="TextFields"/>

    <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" android:autofillHints=""/>

    <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="Senha"
            android:inputType="textPassword" android:autofillHints=""/>

    <EditText
            android:id="@+id/editTextCep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="CEP" />

    <!-- Adicione este botão abaixo dos outros elementos -->
    <Button
            android:id="@+id/buttonSelectImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Selecionar Foto"
            android:layout_marginTop="8dp"/>

    <EditText
            android:id="@+id/editTextLogradouro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="Logradouro" />

    <EditText
            android:id="@+id/editTextNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="Número" />

    <EditText
            android:id="@+id/editTextBairro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="Bairro" />

    <EditText
            android:id="@+id/editTextCidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="Cidade" />

    <EditText
            android:id="@+id/editTextUF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="UF" />

    <!-- Adicione mais campos conforme necessário -->

    <Button
            android:id="@+id/buttonCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Cadastrar" />
</LinearLayout>